updated Index HTML file

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>TODO list app</title>
+    <title>Todo list app</title>
   </head>
   <body>
     <noscript>
